hphp/hack/test/typecheck/let/let_subtype_error.php.exp
File "let_subtype_error.php", line 10, characters 18-25:
Wrong type hint (Typing[4110])
File "let_subtype_error.php", line 10, characters 18-25:
This is an object of type Subclass
File "let_subtype_error.php", line 10, characters 33-36:
It is incompatible with an object of type Base
